# tasks-rs

./: .gitignore  Cargo.toml  README.md  build_and_run.sh
frontend/: index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/pages/: Home.vue
frontend/src/router/: index.js
src/: database.rs  lib.rs  main.rs  routes.rs  server.rs  utils.rs
src/routes/: delete.rs  get.rs  post.rs  put.rs
