[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4"
rusqlite = "0.32.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"


